# games_locker_api

./: Cargo.toml  README.md  README.md 
entity/: Cargo.toml
entity/src/: lib.rs  users.rs
entity/src/entities/: game_states.rs  game_tags.rs  games.rs  mod.rs  optimal_session_length.rs  player_games.rs  players.rs  prelude.rs  tags.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20230727_012952_create_users.rs  m20230802_015101_create_player.rs  m20230803_015122_create_games.rs  m20230803_015448_create_optimal_session_length.rs  m20230804_012906_create_player_games_table.rs  m20230804_015457_create_tag_table.rs  m20230804_015913_create_game_tags_table.rs  m20230813_190143_create_tags_table.rs  m20230813_190550_create_game_states_table.rs  m20230813_190758_create_players_table.rs  m20230813_191055_create_player_games_table.rs  m20230813_193055_create_game_tags_table.rs  tables.rs
src/: config.rs  lib.rs  main.rs
src/api/: auth0.rs  users.rs
src/db/: mod.rs  player_queries.rs  user_queries.rs
src/models/: access_token.rs  app_state.rs  email.rs  game.rs  game_state.rs  game_tag.rs  games.rs  mod.rs  optimal_session_length.rs  player.rs  player_game.rs  player_games.rs  players.rs  users.rs
src/router/: mod.rs  players.rs
src/routes/: healthcheck.rs  mod.rs  user.rs  users.rs
src/routes/users/: mod.rs  types.rs
src/types/: auth0_token.rs  mod.rs  user.rs
tests/: add_one_game.rs  config.rs  db.rs  games.rs  integration.rs  integration_tests.rs  mod.rs  users.rs
tests/types/: new_user.rs  user.rs
