[package]
name = "games_locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
eyre = "0.6.8"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rand = "0.8.5"
