[package]
name = "games_locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

[workspace]
members = [
  "entity",
  "migration"
]
