[package]
name = "games_locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
eyre = "0.6.8"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
axum = "0.6.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.3", features = ["trace"] }
erased-serde = "0.3.28"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
thiserror = "1.0.44"

[workspace]
members = [
  "entity",
  "migration"
]
